@@ -8,6 +8,7 @@ SCHEMA_FILE = schema/fdri.recordspec.yaml
 RECORDS = \
 	Variable \
 	Activity \
+	Aggregation \
 	GeospatialFeatureOfInterest \
 	EnvironmentalMonitoringPlatform \
 	EnvironmentalMonitoringSensor \
